src/styles/isomer-template.scss
/* ... */
@media screen and (max-width: 768px) {
    .isomer-agency-logo {
        max-width:300px
    }
}

.isomer-example {
    transition: .5s ease
}

.isomer-example:hover {
    opacity: .3
}

.image-hover-button {
    position: absolute;
    z-index: 1;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    opacity: 0
}

.image-hover-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0);
    transition: background .5s ease
}

.image-hover-overlay:hover {
    background: #6031b6;
    opacity: .9
}

.image-hoverable {
    position: relative;
    transition: .5s ease
}

.image-hoverable:hover .image-hover-button {
    opacity: 1
}

a.navbar-item {
    margin-right: 0;
    padding-right: 12px!important
}

.resize {
    pointer-events: none;
    position: absolute;
    left: 0px;
    top: 0px;
    right: 0px;
    bottom: 0px;
    overflow: hidden;
    z-index: -1;
    visibility: hidden;
    max-width: 100%;
}

.CodeMirror {
    height: 100% !important;
    overflow-y: scroll;
}

.page-header-container {
    padding-left: 3.125rem;
    margin: 0 0 !important;
}

.page-content-body {
    padding-left: 5rem;
    margin: 0 0 !important;
}

.watermark-container {
    position:relative;
    overflow: hidden;
}

.watermark-text {
    position: absolute;
    top:0;
    right:0;
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: center;
    opacity: 0.9;
    font-size: 5vw;

    .watermark-text-title {
        color: #303754;
        font-weight: 700;
        font-size: 4rem;
        font-family: Lato,sans-serif;
        line-height: 4.8rem;
        margin: 1rem;
    }

    .watermark-text-content {
        color: #303754;
        font-weight: 400;
        font-size: 1.2rem;
        font-style: italic;
        font-family: Lato,sans-serif;
        line-height: 2rem;
    }
}

.resource-sample-mask{
    opacity: 0.1;
}

